# anba4

./: .gitignore  DISCLAIMER  README  README.md  anbax.py  anbax_singular.py  environment.yml  material.cpp  material.py  pyproject.toml  setup.py  voight_notation.py
.github/workflows/: CI_anba4.yml  ci.yml
anba4/: __init__.py  anbax.py  anbax_singular.py  cli.py  io.py  utils.py  voight_notation.py
anba4/material/: __init__.py  material.cpp  material_wrapper.py
examples/: QuadMesh.py  anbax_CUS.py  anbax_C_json.py  anbax_C_section.py  anbax_Omega_section.py  anbax_isotropic.py  anbax_isotropic_singular.py  anbax_multimat_with_hole.py  anbax_multimat_with_hole2.py  anbax_principal_axes.py  anbax_rotation.py  anbax_rotation_multimat.py  anbax_rotation_multimat_json.py  anbax_rotation_multimat_singular.py  anbax_rotation_singular.py  mesh.json  mesh_isotropic.json
examples/test/: test_anbax_isotropic.py  test_examples.py  test_run_Examples.py
scripts/: compare.py
src/anba4/: __init__.py
src/anba4/cli/: main.py  single_calculation.py  unit_loadcases.py
src/anba4/core/: __init__.py  utils.py  voight_notation.py
src/anba4/data/: anba_model.py  data_model.py
src/anba4/fea/: chains.py  fe_functions.py
src/anba4/io/: export.py
tests/: test_C_section.py  test_cli.py  test_io.py  test_isotropic_regular_vs_singular.py  test_isotropic_unittest_migrated.py  test_multimat_with_hole_regular_vs_singular.py  test_principal_axes.py  test_rotation_multimat_regular_vs_singular.py  test_rotation_regular_vs_singular.py  test_run_examples.py
(+7 files in other folders)
