[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anba4"
version = "0.0.1"
dependencies = [
    "pydantic",
    "numpy",
    "fenics",
    "petsc4py",
    "matplotlib",
    "mshr"
]

[project.scripts]
anba4 = "anba4.cli:main"

[tool.setuptools.packages.find]
include = ["anba4*"]

[tool.setuptools.package-data]
anba4 = ["material/material.cpp"]
